--- a/index.html
+++ b/index.html
@@ -8,19 +8,19 @@
 </head>
 <body>
   <div class="container">
-    <h1>📚  Book Manager</h1>
+    <h1>📚  User Manager</h1>
     <div class="form-container">
-      <input type="text" id="bookName" placeholder="Kitob nomi" />
-      <input type="text" id="authorName" placeholder="Muallif nomi" />
-      <input type="number" id="bookYear" placeholder="Yil" />
+      <input type="text" id="bookName" placeholder="Ismi" />
+      <input type="text" id="authorName" placeholder="Familyasi" />
+      <input type="number" id="bookYear" placeholder="Tug'ilgan yili" />
       <button id="addBookBtn">Qo'shish</button>
     </div>
     <table id="bookTable">
       <thead>
         <tr>
-          <th>Kitob nomi</th>
-          <th>Muallif</th>
-          <th>Yil</th>
+          <th>Ismi</th>
+          <th>Familyasi</th>
+          <th>Tug'ilgan yili</th>
           <th>O'chirish</th>
         </tr>
       </thead>
